--- a/index.html
+++ b/index.html
@@ -266,6 +266,21 @@
           </div>
         </div>
 
+       <div class="card reveal reveal-right">
+  <h3 class="card-title">Weather App</h3>
+  <p class="card-desc">
+    A Python project that fetches real-time weather updates using the 
+    <strong>OpenWeather API</strong>.  
+    Users can enter a city name and get details like temperature, weather condition, 
+    humidity, and wind speed.
+  </p>
+  <div class="card-actions">
+    <a href="https://github.com/vaidik-018/weather_check" target="_blank" class="text-link">
+      <i class="fa-brands fa-github mr-1"></i> View Project
+    </a>
+  </div>
+</div>
+
       </div>
     </section>
 
@@ -353,3 +368,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
